syntax = "proto3";
package proto;

message Empty {}

message InitRequest {
  map<string, string> config = 1;
}

message InitResponse {
  bool success = 1;
}

message RemoveRequest {
  bool force = 1;
}

message ExistResponse {
  bool exist = 1;
}

message AvailableResponse {
  bool available = 1;
}

message SSHOptionsResponse {
  string hostname         = 1;
  int32  port             = 2;
  string username         = 3;
  string private_key_file = 4;
}

message DockerOptionsResponse {
  string version   = 1;
  string host      = 2;
  string ca_file   = 3;
  string cert_file = 4;
  string key_file  = 5;
}

service Stage {
  rpc Initialize(InitRequest) returns (InitResponse);
  rpc Create(Empty) returns (Empty);
  rpc Remove(RemoveRequest) returns (Empty);
  rpc Start(Empty) returns (Empty);
  rpc Stop(Empty) returns (Empty);
  rpc Exist(Empty) returns (ExistResponse);
  rpc Available(Empty) returns (AvailableResponse);
  rpc GetSSHOptions(Empty) returns (SSHOptionsResponse);
  rpc GetDockerOptions(Empty) returns (DockerOptionsResponse);
}
